      trip over synonyms (and others) that are named after the column's actual
      "key" (since, column_prefix means "dont use the key").
- sql
    - MetaData and all SchemaItems are safe to use with pickle.  slow
      table reflections can be dumped into a pickled file to be reused later.
      Just reconnect the engine to the metadata after unpickling. [ticket:619]
    - fixed grouping of compound selects to give correct results. will break
      on sqlite in some cases, but those cases were producing incorrect
      results anyway, sqlite doesn't support grouped compound selects
      [ticket:623]
    - fixed precedence of operators so that parenthesis are correctly applied
      [ticket:620]
    - calling <column>.in_() (i.e. with no arguments) will return 
      "CASE WHEN (<column> IS NULL) THEN NULL ELSE 0 END = 1)", so that 
      NULL or False is returned in all cases, rather than throwing an error
      [ticket:545]
    - fixed "where"/"from" criterion of select() to accept a unicode string
      in addition to regular string - both convert to text()
    - added standalone distinct() function in addition to column.distinct()
      [ticket:558]
    - result.last_inserted_ids() should return a list that is identically
      sized to the primary key constraint of the table.  values that were 
      "passively" created and not available via cursor.lastrowid will be None.
    - long-identifier detection fixed to use > rather than >= for 
      max ident length [ticket:589]
    - fixed bug where selectable.corresponding_column(selectable.c.col)
      would not return selectable.c.col, if the selectable is a join
      of a table and another join involving the same table.  messed
      up ORM decision making [ticket:593]
    - added Interval type to types.py [ticket:595]
- mysql
    - fixed catching of some errors that imply a dropped connection [ticket:625]
    - fixed escaping of the modulo operator [ticket:624]