@@ -23,9 +23,10 @@ from sqlalchemy import exceptions, logging
 from sqlalchemy import queue as Queue
 
 try:
-    import thread
+    import thread, threading
 except:
     import dummy_thread as thread
+    import dummy_threading as threading
 
 proxies = {}
 
@@ -469,6 +470,7 @@ class QueuePool(Pool):
         self._overflow = 0 - pool_size
         self._max_overflow = max_overflow
         self._timeout = timeout
+        self._overflow_lock = threading.Lock()
 
     def recreate(self):
         self.log("Pool recreating")
@@ -478,16 +480,24 @@ class QueuePool(Pool):
         try:
             self._pool.put(conn, False)
         except Queue.Full:
-            self._overflow -= 1
+            self._overflow_lock.acquire()
+            try:
+                self._overflow -= 1
+            finally:
+                self._overflow_lock.release()
 
     def do_get(self):
         try:
             return self._pool.get(self._max_overflow > -1 and self._overflow >= self._max_overflow, self._timeout)
         except Queue.Empty:
-            if self._max_overflow > -1 and self._overflow >= self._max_overflow:
-                raise exceptions.TimeoutError("QueuePool limit of size %d overflow %d reached, connection timed out" % (self.size(), self.overflow()))
-            con = self.create_connection()
-            self._overflow += 1
+            self._overflow_lock.acquire()
+            try:
+                if self._max_overflow > -1 and self._overflow >= self._max_overflow:
+                    raise exceptions.TimeoutError("QueuePool limit of size %d overflow %d reached, connection timed out" % (self.size(), self.overflow()))
+                con = self.create_connection()
+                self._overflow += 1
+            finally:
+                self._overflow_lock.release()
             return con
 
     def dispose(self):
